some scope text

--- a/samples/BlazorWebAssemblyOidcSample.Client/wwwroot/appsettings.json
+++ b/samples/BlazorWebAssemblyOidcSample.Client/wwwroot/appsettings.json
@@ -2,6 +2,6 @@
   "IdentitySettings": {
     "Authority": "https://...some authority.../",
     "ClientId": "...client id...",
-    "Scope": "...some authority..." //space separated list of values
+    "Scope": "...some scope..." //space separated list of values
   }
 }
