AccessTokenMessageHandler added, attache access tokens to api calls. Delete session on logout call back.

--- a/samples/BlazorWebAssemblyOidcSample.Server/appsettings.json
+++ b/samples/BlazorWebAssemblyOidcSample.Server/appsettings.json
@@ -1,10 +1,14 @@
 {
   "Logging": {
-      "LogLevel": {
+    "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
-      }
-    },
-"AllowedHosts": "*"
+    }
+  },
+  "AllowedHosts": "*",
+  "IdentitySettings": {
+    "Authority": "https://...some authority.../",
+    "ResourceId": "...resource id..."
+  }
 }
