--- a/src/ITfoxtec.Identity.BlazorWebAssembly.OpenidConnect/ITfoxtec.Identity.BlazorWebAssembly.OpenidConnect.csproj
+++ b/src/ITfoxtec.Identity.BlazorWebAssembly.OpenidConnect/ITfoxtec.Identity.BlazorWebAssembly.OpenidConnect.csproj
@@ -23,8 +23,8 @@
 	<ItemGroup>
 		<PackageReference Include="Blazored.SessionStorage" Version="1.0.11" />
 		<PackageReference Include="ITfoxtec.Identity" Version="1.1.7" />
-		<PackageReference Include="Microsoft.AspNetCore.Components" Version="5.0.0-preview.3.20215.14" />
-		<PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="5.0.0-preview.3.20215.14" />
+		<PackageReference Include="Microsoft.AspNetCore.Components" Version="3.1.4" />
+		<PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="3.1.4" />
 	</ItemGroup>
 
 </Project>
