--- a/src/ITfoxtec.Identity.BlazorWebAssembly.OpenidConnect/ITfoxtec.Identity.BlazorWebAssembly.OpenidConnect.csproj
+++ b/src/ITfoxtec.Identity.BlazorWebAssembly.OpenidConnect/ITfoxtec.Identity.BlazorWebAssembly.OpenidConnect.csproj
@@ -7,12 +7,15 @@
 		
 		<Authors>Anders Revsgaard</Authors>
 		<Company>ITfoxtec</Company>
-		<Description>A JavaScript free OpenID Connect PKCE library for Blazor WebAssembly. Support refresh token with the offline_access scope.</Description>
+		<Description>A JavaScript free OpenID Connect PKCE library for Blazor WebAssembly.
+The received ID token is validated by the component in the client using the OpenID Provider (OP) discovery document.
+The component automatically handle token / session update with use of the refresh token if the offline_access scope is specified.
+    </Description>
 		<PackageLicenseExpression>BSD-3-Clause</PackageLicenseExpression>
 		<PackageIconUrl>https://itfoxtec.com/favicon.ico</PackageIconUrl>
 		<RepositoryType>git</RepositoryType>
 		<RepositoryUrl>https://github.com/ITfoxtec/ITfoxtec.Identity.BlazorWebAssembly.OpenidConnect</RepositoryUrl>
-		<PackageTags>Blazor WebAssembly OpenID Connect (OIDC) Proof Key for Code Exchange (PKCE) id token id_token access token access_token refresh token refresh_token</PackageTags>
+		<PackageTags>Blazor WebAssembly OpenID Connect (OIDC) Proof Key for Code Exchange (PKCE) id token access token refresh token</PackageTags>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 		<Copyright>© 2020 ITfoxtec</Copyright>
 		<AssemblyVersion>1.1.0.0</AssemblyVersion>
