Support one resource parameter.

--- a/samples/BlazorWebAssemblyOidcSample.Client/wwwroot/appsettings.json
+++ b/samples/BlazorWebAssemblyOidcSample.Client/wwwroot/appsettings.json
@@ -3,6 +3,7 @@
     "Authority": "https://...some authority.../",
     "ClientId": "...client id...",
     "Scope": "offline_access ...some scope...", //space separated list of values
+    //"Resources": [ "...resource..." ],
     "AuthorizedUris": [ "...authorized api uri..." ]
   }
 }
