--- a/src/ITfoxtec.Identity.BlazorWebAssembly.OpenidConnect/ITfoxtec.Identity.BlazorWebAssembly.OpenidConnect.csproj
+++ b/src/ITfoxtec.Identity.BlazorWebAssembly.OpenidConnect/ITfoxtec.Identity.BlazorWebAssembly.OpenidConnect.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
 
 	<PropertyGroup>
-		<TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFrameworks>net5.0;netstandard2.0</TargetFrameworks>
 		<RazorLangVersion>3.0</RazorLangVersion>
 		<RootNamespace>ITfoxtec.Identity.BlazorWebAssembly.OpenidConnect</RootNamespace>
 		
@@ -18,16 +18,23 @@ The component automatically handle token / session update with use of the refres
 		<PackageTags>Blazor WebAssembly OpenID Connect (OIDC) Proof Key for Code Exchange (PKCE) id token access token refresh token</PackageTags>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 		<Copyright>© 2020 ITfoxtec</Copyright>
-		<AssemblyVersion>1.1.3.0</AssemblyVersion>
-		<FileVersion>1.1.3.0</FileVersion>
-		<Version>1.1.3</Version>
+		<AssemblyVersion>1.2.0.0</AssemblyVersion>
+		<FileVersion>1.2.0.0</FileVersion>
+		<Version>1.2.0</Version>
 	</PropertyGroup>
 
-	<ItemGroup>
-		<PackageReference Include="Blazored.SessionStorage" Version="1.0.12" />
-		<PackageReference Include="ITfoxtec.Identity" Version="1.3.0" />
-		<PackageReference Include="Microsoft.AspNetCore.Components" Version="3.1.7" />
-		<PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="3.1.7" />
-	</ItemGroup>
+  <ItemGroup Condition=" '$(TargetFramework)' == 'net5.0'">
+    <PackageReference Include="Blazored.SessionStorage" Version="1.0.12" />
+    <PackageReference Include="ITfoxtec.Identity" Version="2.0.2" />   
+    <PackageReference Include="Microsoft.AspNetCore.Components" Version="5.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="5.0.0" />
+  </ItemGroup>
 
+  <ItemGroup Condition=" '$(TargetFramework)' == 'netstandard2.1'">
+    <PackageReference Include="Blazored.SessionStorage" Version="1.0.12" />
+    <PackageReference Include="ITfoxtec.Identity" Version="1.3.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Components" Version="3.1.7" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="3.1.7" />
+  </ItemGroup>
+  
 </Project>
