--- a/samples/BlazorWebAssemblyOidcSample.Client/BlazorWebAssemblyOidcSample.Client.csproj
+++ b/samples/BlazorWebAssemblyOidcSample.Client/BlazorWebAssemblyOidcSample.Client.csproj
@@ -1,21 +1,20 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
 
-	<PropertyGroup>
-		<TargetFramework>net5.0</TargetFramework>
-		<RazorLangVersion>3.0</RazorLangVersion>
-	</PropertyGroup>
+  <PropertyGroup>
+    <TargetFramework>net5.0</TargetFramework>
+  </PropertyGroup>
 
-	<ItemGroup>
-		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="5.0.0" />
-		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Build" Version="5.0.0" PrivateAssets="all" />
-		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="5.0.0" PrivateAssets="all" />
-		<PackageReference Include="Microsoft.Extensions.Http" Version="5.0." />
-		<PackageReference Include="System.Net.Http.Json" Version="5.0.0" />
-	</ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="5.0.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="5.0.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="5.0.01" PrivateAssets="all" />
+    <PackageReference Include="System.Net.Http.Json" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="5.0.0" />
+  </ItemGroup>
 
-	<ItemGroup>
-		<ProjectReference Include="..\..\src\ITfoxtec.Identity.BlazorWebAssembly.OpenidConnect\ITfoxtec.Identity.BlazorWebAssembly.OpenidConnect.csproj" />
-		<ProjectReference Include="..\BlazorWebAssemblyOidcSample.Shared\BlazorWebAssemblyOidcSample.Shared.csproj" />
-	</ItemGroup>
-
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\ITfoxtec.Identity.BlazorWebAssembly.OpenidConnect\ITfoxtec.Identity.BlazorWebAssembly.OpenidConnect.csproj" />
+    <ProjectReference Include="..\BlazorWebAssemblyOidcSample.Shared\BlazorWebAssemblyOidcSample.Shared.csproj" />
+  </ItemGroup>
+  
 </Project>
