--- a/src/ITfoxtec.Identity.BlazorWebAssembly.OpenidConnect/ITfoxtec.Identity.BlazorWebAssembly.OpenidConnect.csproj
+++ b/src/ITfoxtec.Identity.BlazorWebAssembly.OpenidConnect/ITfoxtec.Identity.BlazorWebAssembly.OpenidConnect.csproj
@@ -7,11 +7,13 @@
 
     <Authors>Anders Revsgaard</Authors>
     <Company>ITfoxtec</Company>
-    <Description>
-      A JavaScript free OpenID Connect PKCE library for Blazor WebAssembly.
-      The received ID token is validated by the component in the client using the OpenID Provider (OP) discovery document.
-      The component automatically handle token / session update with use of the refresh token if the offline_access scope is specified.
-    </Description>
+    <Description>A JavaScript free OpenID Connect PKCE library for Blazor WebAssembly.
+
+      Support .NET 5.0
+      Support .NET Standard 2.0
+
+The received ID token is validated by the component in the client using the OpenID Provider (OP) discovery document.
+The component automatically handle token / session update with use of the refresh token if the offline_access scope is specified.</Description>
     <PackageLicenseExpression>BSD-3-Clause</PackageLicenseExpression>
     <PackageIconUrl>https://itfoxtec.com/favicon.ico</PackageIconUrl>
     <RepositoryType>git</RepositoryType>
@@ -19,13 +21,13 @@
     <PackageTags>Blazor WebAssembly OpenID Connect (OIDC) Proof Key for Code Exchange (PKCE) id token access token refresh token</PackageTags>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Copyright>© 2020 ITfoxtec</Copyright>
-    <AssemblyVersion>1.2.12.0</AssemblyVersion>
-    <FileVersion>1.2.12.0</FileVersion>
-    <Version>1.2.12</Version>
+    <AssemblyVersion>1.2.14.0</AssemblyVersion>
+    <FileVersion>1.2.14.0</FileVersion>
+    <Version>1.2.14</Version>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="ITfoxtec.Identity" Version="2.0.25" />
+    <PackageReference Include="ITfoxtec.Identity" Version="2.0.26" />
   </ItemGroup>
 
   <ItemGroup Condition=" '$(TargetFramework)' == 'net5.0'">
