Configured for https://foxids.com/test-corp
API require "blazorweba_oidcpkce_sample:access" scope with
AccessPolicyAttribute.

--- a/samples/BlazorWebAssemblyOidcSample.Client/wwwroot/appsettings.json
+++ b/samples/BlazorWebAssemblyOidcSample.Client/wwwroot/appsettings.json
@@ -1,9 +1,9 @@
 {
   "IdentitySettings": {
-    "Authority": "https://...some authority.../",
-    "ClientId": "...client id...",
-    "Scope": "offline_access ...some scope...", //space separated list of values
+    "Authority": "https://foxids.com/test-corp/-/blazorweba_oidcpkce_sample(login)/",
+    "ClientId": "blazorweba_oidcpkce_sample",
+    "Scope": "offline_access blazorweba_oidcpkce_sample:access", //space separated list of values
     //"Resources": [ "...resource..." ],
-    "AuthorizedUris": [ "...authorized api uri..." ]
+    "AuthorizedUris": [ "https://localhost:44315" ]
   }
 }
