--- a/samples/BlazorWebAssemblyOidcSample.Server/appsettings.json
+++ b/samples/BlazorWebAssemblyOidcSample.Server/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "IdentitySettings": {
-    "Authority": "https://...some authority.../",
-    "ResourceId": "...resource id..."
+    "Authority": "https://foxids.com/test-corp/-/blazorweba_oidcpkce_sample(login)/",
+    "ResourceId": "blazorweba_oidcpkce_sample"
   }
 }
