--- a/samples/BlazorWAOidcSample.Server/BlazorWAOidcSample.Server.csproj
+++ b/samples/BlazorWAOidcSample.Server/BlazorWAOidcSample.Server.csproj
@@ -2,7 +2,9 @@
 
 	<PropertyGroup>
 		<TargetFramework>net5.0</TargetFramework>
-	</PropertyGroup>
+    <AssemblyName>BlazorWebAssemblyOidcSample.Server</AssemblyName>
+    <RootNamespace>BlazorWebAssemblyOidcSample.Server</RootNamespace>
+  </PropertyGroup>
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.1" />
@@ -10,8 +12,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\BlazorWebAssemblyOidcSample.Client\BlazorWebAssemblyOidcSample.Client.csproj" />
-		<ProjectReference Include="..\BlazorWebAssemblyOidcSample.Shared\BlazorWebAssemblyOidcSample.Shared.csproj" />
+		<ProjectReference Include="..\BlazorWAOidcSample.Client\BlazorWAOidcSample.Client.csproj" />
+		<ProjectReference Include="..\BlazorWAOidcSample.Shared\BlazorWAOidcSample.Shared.csproj" />
 	</ItemGroup>
 
 
