--- a/samples/BlazorWAOidcSample.Client/wwwroot/appsettings.json
+++ b/samples/BlazorWAOidcSample.Client/wwwroot/appsettings.json
@@ -2,6 +2,7 @@
   "IdentitySettings": {
     "Authority": "https://foxids.com/test-corp/-/blazorweba_oidcpkce_sample(login)/",
     "ClientId": "blazorweba_oidcpkce_sample",
+    //"ResponseMode": "query",
     "Scope": "profile offline_access blazorweba_oidcpkce_sample:access", //space separated list of values
     //"Resources": [ "...resource..." ],
     "AuthorizedUris": [ "https://localhost:44315" ]
