NameClaimType and RoleClaimType in config

--- a/samples/BlazorWAOidcSample.Client/wwwroot/appsettings.json
+++ b/samples/BlazorWAOidcSample.Client/wwwroot/appsettings.json
@@ -3,6 +3,8 @@
     "Authority": "https://foxids.com/test-corp/-/blazorweba_oidcpkce_sample(login)/",
     "ClientId": "blazorweba_oidcpkce_sample",
     //"ResponseMode": "query",
+    //"NameClaimType": "sub",
+    //"RoleClaimType": "role",
     "Scope": "profile offline_access blazorweba_oidcpkce_sample:access", //space separated list of values
     //"Resources": [ "...resource..." ],
     "AuthorizedUris": [ "https://localhost:44315" ]
