sample ResponseMode info, default fragment

--- a/samples/BlazorWAOidcSample.Client/wwwroot/appsettings.json
+++ b/samples/BlazorWAOidcSample.Client/wwwroot/appsettings.json
@@ -2,7 +2,7 @@
   "IdentitySettings": {
     "Authority": "https://foxids.com/test-corp/-/blazorweba_oidcpkce_sample(login)/",
     "ClientId": "blazorweba_oidcpkce_sample",
-    //"ResponseMode": "query",
+    //"ResponseMode": "query", // default fragment
     //"NameClaimType": "sub",
     //"RoleClaimType": "role",
     "Scope": "profile offline_access blazorweba_oidcpkce_sample:access", //space separated list of values
